# Cyber-Universe-Capstone-v1

./: .gitignore  .pre-commit-config.yaml  CAHIERS_DES_CHARGES_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  LICENSE  MANUAL.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README2.md  docker-compose.yml  overview.md  requirements.txt  setup.sh
.github/workflows/: defensive-ops-ci.yml  offensive-ops-ci.yml  secure-ci-cd.yml
Aetherium_experimental/: AetheriumCrypt.py  AetheriumCrypt_Ultra.py  AetheriumCrypttlv.py  AetheriumCryptv1.py  AetheriumCryptv2.py  README_Aetherium.md
aetherium/: AetheriumCrypt.py  AetheriumV2.py  DOCUMENTATION_TECHNIQUE.md  QUICK_REFERENCE.md  __init__.py  audit.py  kdf_utils.py  main.py  pqc_backend.py  requirements.txt  secure_store.py
blockchain/: README.md  hardhat.config.js  package-lock.json  package.json
blockchain/cache/: solidity-files-cache.json
blockchain/contracts/: SecureBank.sol
blockchain/scripts/: audit.js
defensive-ops/: README.md
defensive-ops/frontend/: nginx.conf  package.json
defensive-ops/kumoshield/sensors/: Cargo.toml
defensive-ops/shinra/: Dockerfile  requirements.txt
devsecops/: main.py  pipeline.py  policies.py  scanner.py  secrets.py
docs/: DOCUMENTATION_COMPLETE.md
k8s/base/: deployment.yaml  namespace.yaml  rbac.yaml  service.yaml
key-generator/: Dockerfile  GUIDE_UTILISATION.md  PROJECT_SUMMARY.md  README.md  TEST_GENERATE.md  __init__.py  api.py  core.py  docker-compose.yml  key_generator_audit.json  requirements.txt  run.py  security.py  start.bat  start.sh
key-generator/templates/: about.html  generate.html  index.html  security.html
monitoring/alertmanager/: alertmanager-config.yaml
offensive-ops/: README.md
offensive-ops/genjutsu/: README.md
offensive-ops/genjutsu/llvm-pass/: CMakeLists.txt
offensive-ops/ghost/: Cargo.toml
offensive-ops/hiraishin/: README.md
rag-assistant/: Dockerfile  README.md  docker-compose.yml  env.example  quick_start.py  requirements.txt  run.py  start_server.py
rag-assistant/monitoring/: prometheus.yml
rag-assistant/test/: test_main.http
secure-navigation-messaging/: README_VPN_EMAIL.md  demo_vpn_email_secure.py  email_advanced.py  main_secure_navigation.py  protocol_validator.py  run_security_tests.py  secure_cli.py  secure_email.py  secure_ui.py  security_tests.py  tor_manager.py  vpn_advanced.py  vpn_manager.py
secure-navigation-messaging/tests/: test_email_advanced.py  test_vpn_advanced.py
tls/: compare_tls.py  generate_certs_secure.sh
zk-proof/: .gitignore  README.md  demo.js  input.json  install.js  package.json
zk-proof/circuits/: password_verification.circom
(+33 files in other folders)
