[package]
name = "ghost-compiler"
version = "1.0.0"
edition = "2021"
authors = ["Ghost Cyber Universe Team"]

[dependencies]
# No standard library - for stealth operation
# Core allocation for dynamic memory
# Windows API for injection

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "memoryapi", "processthreadsapi", "handleapi", "errhandlingapi"] }

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Enable Link Time Optimization
codegen-units = 1      # Better optimization
panic = "abort"        # Smaller binary
strip = true           # Remove symbols

[lib]
crate-type = ["staticlib", "cdylib"]
