[package]
name = "kumoshield-sensors"
version = "1.0.0"
edition = "2021"
authors = ["Ghost Cyber Universe Team"]
description = "eBPF-based security sensors for KumoShield S-IA"

[dependencies]
# eBPF libraries
aya = "0.11"
aya-log = "0.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Networking
libc = "0.2"

[lib]
name = "kumoshield_sensors"
path = "src/lib.rs"

[[bin]]
name = "kumoshield-agent"
path = "src/main.rs"
